# khaos-core

./: .gitignore  CMakeLists.txt  ETHICS.md  INTEGRATION_REPORT.md  KHAOS_CORE_Technical_Paper.docx  MANIFESTO.md  README.md  demo_wyss.py  requirements.txt  setup.py
.github/workflows/: ci.yml
coefficients/: sos_8_30hz.h
dashboard/: index.html  server.py
hardware/arduino/: arduino_driver.py  khaos_tactile.ino
hardware/arduino/khaos_tactile/: khaos_tactile.ino
hardware/arduino/test_buzzer/: test_buzzer.ino
include/: dsp_pipeline.h  feedback_engine.h  fpga_driver.h  khaos_bridge.h  lsl_connector.h  safety_constants.h  sha256.h
scripts/: calibration_wizard.py  demo.py  demo_wyss.py  gen_coefficients.py  gen_visuals.py  init_khaos.sh  validate_celegans.py
scripts/coefficients/: sos_8_30hz.h  sos_8_30hz.json
src/: main.cpp
src/bci/: feature_extractor.py
src/ethics/: ethics_bridge.py  ethics_gate.py
src/graphene/: dirac_emulator.py
src/io/: fpga_driver.cpp  muse2_adapter.py
src/models/: electrode_model.py
src/neuro/: dsp_pipeline.cu  dwt.cu  feedback_engine.cu  lsl_connector.cpp  signal_processor.cu
src/quantum/: circuits.py  mirror_bridge.py
src/security/: sha256.cpp  sovereignty_monitor.cpp
src/ui/: sovereignty_dashboard.py
tests/unit/: test_cross_stack_fidelity.py  test_dwt.cu  test_ethics_log_chain.py  test_iir_filter.cu  test_stim_cap.py  test_swap_fidelity.py
vault/: landmarks.json
